tests/ifcc-test-output/testfiles-functions-void_error_declaration3/gcc-compile.txt
input.c:1:14: error: expected identifier or ‘(’ before ‘}’ token
    1 | void func(){}};
      |              ^

return code: 1
